# myfastapi

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docs  main.py  pyproject.toml  req.txt  requirements.txt  run.sh  version  weblog.py
alembic/: env.py
app/api/: __init__.py  deps.py  enums.py  helper.py  model.py  router.py  socketio.py  socketio_test.html  tasks.py
app/api/base/: auth.py  (+8 more)
app/common/: channel.py  decorator.py  encoder.py  error.py  errors.py  myalipay.py  pagation.py  resolve.py  response.py  security.py
app/config/: development.py  production.py  testing.py
app/core/: celery_app.py  celery_conf.py  celeryconfig.py  db.py  exceptions.py  middleware.py  oauth2.py  redis.py  schedule.py  settings.py  sio.py  socketio  socketio.py
app/extensions/: __init__.py  cache.py  db.py  minios.py  mongo.py  redis.py  schedule.py  scheduler.py  socketIo.py  socketio.py  websocket.py  websockets.py
app/script/: command.py  init_data.py
app/settings/: __init__.py  development.py  production.py  testing.py
app/template/: socketio_test.html
app/utils/: AliPay.py  Image.py  asyfunc.py  encrypt.py  fastmail.py  logger.py  minios.py  randomly.py  snowflake.py  times.py
apps/: __init__.py  deps.py  model.py  router.py
apps/base/: auth.py  model.py  router.py  schemas.py  task.py  tasks.py  views_admin.py
apps/blog/: model.py  schemas.py  views_admin.py
common/: errors.py  response.py  security.py
core/: celery_app.py  db.py  exceptions.py  middleware.py  redis.py  schedule.py  settings.py
docs/: nginx  run  sio  supervisor
script/: command.py  init_data.py
script/data/: goods.json  goods_category.json
src/common/: db.py  settings.py
utils/: fastmail.py  logger.py
(+39 files in other folders)
