[tool.poetry]
name = "myfastapi"
version = "0.1.0"
description = ""
authors = ["wxhou <wxhou@yunjinginc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
SQLAlchemy = "1.4.40"
python-socketio = "5.7.1"
gunicorn = "20.1.0"
loguru = "0.6.0"
redlock = "1.2.0"
motor = "3.1.1"
aioredis = "2.0.1"
celery = "5.2.7"
alembic = "1.8.1"
click = "8.1.3"
Pillow = "9.2.0"
PyMySQL = "1.0.2"
PyYAML = "6.0"
asyncmy = "0.2.5"
dill = "0.3.6"
ulid-py = "1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
