[tool.poetry]
name = "myfastapi"
version = "0.1.0"
description = ""
authors = ["wxhou <wxhou@yunjinginc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
SQLAlchemy = "1.4.46"
python-socketio = "5.7.1"
gunicorn = "20.1.0"
loguru = "0.6.0"
redlock = "1.2.0"
motor = "3.1.1"
aioredis = "2.0.1"
celery = "5.2.7"
alembic = "1.8.1"
click = "8.1.3"
Pillow = "9.2.0"
PyMySQL = "1.0.2"
PyYAML = "6.0"
asyncmy = "0.2.5"
dill = "0.3.6"
ulid-py = "1.1.0"
orjson = "^3.8.3"
alipay-sdk-python = "^3.6.498"
asgiref = "^3.6.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
slowapi = "^0.1.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
celery-redbeat = "^2.0.0"
pydantic = {extras = ["email"], version = "^1.10.4"}
starlette-csrf = "^1.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
default = true